2014-09-08  Albert Graef  <aggraef@gmail.com>

	* LLVM 3.5 compatibility fixes

2014-03-24  Albert Gräf  <aggraef@gmail.com>

	* 0.60 release.

	* interpreter.cc, runtime.cc, etc/pure-mode.el.in,
	test/test020.pure: minor fixes for OS X compatibility.

2014-03-09  Albert Graef  <aggraef@gmail.com>

	* runtime.cc/hh: Add some helper functions to serialize accesses
	to the runtime, to be used if the runtime needs to be called from
	multithreaded C/C++ code. This essentially implements a global
	interpreter lock (GIL) which isn't nice, but can't really be
	avoided in some situations until the Pure runtime becomes fully
	thread-safe.

2014-03-02  Albert Graef  <aggraef@gmail.com>

	* interpreter.cc/hh, runtime.cc: Keep track of global interpreter
	contexts, to make switching between interpreter instances more
	robust. Specifically, in batch-compiled modules there's only a
	single global instance of the sstk (shadow stack) and fptr
	(environment) variables, so we need to ensure that these aren't
	clobbered if multiple interpreter instances run in concert.
	Similar considerations apply to the static baseptr member which is
	used to check for stack overflows; in this case we also try to
	detect situations where the baseptr needs to be updated due to
	context switches.

2014-02-26  Albert Graef  <aggraef@gmail.com>

	* 0.59 release.

2014-01-08  Albert Graef  <aggraef@gmail.com>

	* configure.ac, interpreter.cc: Changes for LLVM 3.4 compatibility.

2013-09-16  Albert Graef  <aggraef@gmail.com>

	* 0.58 release.

	* runtime.cc (pure_invoke): Fix an obscure memory corruption bug
	which might cause temporaries to be freed prematurely. Fixes issue
	#7 reported by ebm_boy.

2013-09-13  Albert Graef  <aggraef@gmail.com>

	* pure.cc, lexer.ll, interpreter.cc/hh, runtime.cc: Added
	--symbolic/--nosymbolic pragmas, cf. issue #12. This compilation
	option allows you to set the interpreter's default mode to
	non-symbolic so that all global functions with rules are treated