@@ -1,3 +1,10 @@
+2014-09-09  Albert Graef  <aggraef@gmail.com>
+
+	* interpreter.cc (interpreter::compiler): For LLVM 3.3 and later,
+	let llc create native objects directly from the LLVM source. This
+	should speed up compilation and also work around bugs which make
+	llc generate invalid native assembler code on some systems.
+
 2014-09-08  Albert Graef  <aggraef@gmail.com>
 
 	* LLVM 3.5 compatibility fixes
